crates/toml/tests/snapshots/invalid/integer/leading-zero-01.stderr
TOML parse error at line 1, column 18
  |
1 | leading-zero-1 = 01
  |                  ^
unexpected leading zero, expected nothing
